# Arcboot

./: .gitignore  BUILDING.md  Cargo.toml  LICENSE  NOTES.md  README.md  TESTING.md  TODO.md  TOOLS.md  debug.cmd  kernel.build
.arcboot/: debug.sh  run.sh  run_standard.sh  run_uefi.sh  test.sh
.arcboot/aarch64/: arcboot.ld  armv8.json
.arcboot/diskImage/EFI/BOOT/: .gitignore
.arcboot/diskImage/sys/firmware/efi/: efivars
.cargo/: config.toml
arcboot/: Cargo.toml  README.md
arcboot/.cargo/: config.toml
arcboot/src/: boot.rs  lib.rs  logger.rs  main.rs  qemu.rs  sync.rs
arcboot/src/aarch64/: mod.rs
arcboot/src/aarch64/drivers/: pi4b.rs
arcboot/src/arm64/: interrupt.rs  memory.rs  mod.rs  setup.rs
arcboot/src/arm64/drivers/: mod.rs  pcie.rs  pi4b.rs  uart.rs
arcboot/src/drivers/: mod.rs
arcboot/src/efi/: acpi.rs  mod.rs
arcboot/src/efi/boot/: memory.rs
arcboot/src/efi/proto/console/: gop.rs
arcboot/src/efi/proto/media/: known_disk.rs
arcboot/src/memory/: heap.rs  mmu.rs  mod.rs
arcboot/src/riscv64/: mod.rs
arcboot/src/riscv64/arcdrivers/: mod.rs
arcboot/src/riscv64/asm/: entry.S
arcboot/src/x86_64/drivers/: mod.rs
arcboot/tests/: arcboot.rs
archive/: 1.arch
arcutils/.cargo/: config.toml
docs/: ARCBOOT.md  ARCH.md  BUILDING.md  DESIGN.md  OLD.md  TESTING_AND_RUNNING.md  TODO.md  TOOLS.md  _config.yml  index.md
docs/pages/: arch.md  building.md  design.md  notes.md  removed.md  testing.md  todo.md  tools.md
examples/: kernel.build
examples/link/riscv64/: linker.ld
examples/support/: spectro.build
export/: Cargo.toml  README.md  api.rs
export/src/: lib.rs
lib/: README.md
lib/acpica/components/dispatcher/: dsargs.c
lib/acpica/components/tables/: tbxfroot.c
macros/: Cargo.toml
qscripts/: patch-push-crate.sh
src/: bootimg.rs  builder.rs  lib.rs  logger.rs  main.rs  readenv.rs  test.rs  uefi.rs
src/aarch64/: memory.rs  mod.rs  paging.rs  setup.S  setup.rs
src/aarch64/drivers/: mod.rs  uart.rs
src/aarch64/reference/: pi4-entry.S
src/arcdriver/: mod.rs
src/arm/: efi-app.c
src/armv8/: boot.c
src/drivers/: mod.rs
src/efi/: acpi.rs  mod.rs
src/efi/boot/: memory.rs
src/efi/proto/media/: mod.rs
src/memory/: heap.rs  mmu.rs  mod.rs  paging.rs
src/riscv/: uefi_entry.S
src/riscv64/: mod.rs
src/riscv64/arcdrivers/: graphics.rs  mod.rs
src/riscv64/reference/: entry.S
src/x86_64/: mod.rs
src/x86_64/drivers/: mod.rs
support/: spectro.build
xtask/src/: main.rs
