[package]
description = "Arc Main"
edition = "2021"
license = "GPL-3.0-only"
name = "arcboot_main"
version = "0.1.1"

[workspace]
members = ["export", "arcboot"]

[dependencies]
# uses builtin allocator by default.. Maybe dont do that, and make it optional and build with cargo barm/x86
arcboot = { path = "arcboot", optional = true}
arcboot_api = { path = "export", optional = true }
log = { version = "0.4.11", default-features = false }
# some problems with reexporting
uefi = { version = "0.16.0", features = ["exts"] }
uefi-macros = { version = "0.7.0" }
# IDE issues, could prob fix some other way but meh
aarch64 = "*"
cortex-a = "*"

[features]
default = ["arcboot"]
api = ["arcboot_api"]
arcboot = ["dep:arcboot"]
# link this when barm
builtin_allocator = ["arcboot/builtin_allocator"]
# ? is there some way to link against a feature of a dep?
# when testing main.rs, turn this on
main_test = []
