[package]
description = "Arc Main"
edition = "2021"
license = "GPL-3.0-only"
name = "arcboot_main"
version = "0.1.1"

[workspace]
members = ["export", "macros", "arcboot"]

[dependencies]
arcboot = { path = "arcboot", optional = true }
arcboot_api = { path = "export", optional = true }
arcboot_macros = { path = "macros", optional = true }
log = { version = "0.4.11", default-features = false }
uefi = { version = "0.16.0", features = ["exts"] }
uefi-macros = { version = "0.7.0" }
aarch64 = "0.0.7"
cortex-a = "7.4.0"
tock-registers = "0.7.0"
acpi = { version = "4.1.0", optional = true }

[features]
default = ["api"]
api = ["arcboot_api", "arcboot_macros"]
uefi_support = ["arcboot/uefi_support", "dep:acpi"]
# link this for the most part, unless you want to link against some other allocator
builtin_allocator = ["arcboot/builtin_allocator"]
# when testing main.rs, turn this on
main_test = []
