[package]
description = "Arc Bootloaders for RV, ARM and x86"
edition = "2021"
license = "GPL-3.0-only"
name = "arcboot"
version = "0.1.1"

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[dependencies]
uefi = { version = "0.16.0", features = ["exts"], optional = true }
uefi-macros = { version = "0.7.0", optional = true }
acpi = { version = "4.1.0", optional = true }
embedded-hal = "0.2.7"
log = { version = "0.4.11", default-features = false }
tock-registers = "0.7.0"
goblin = { version = "0.5.1", default-features = false, features = [
    "elf64",
    "elf32",
    "archive",
    "endian_fd",
    "alloc",
] }
linked_list_allocator = "0.9.1"
qemu-exit = "3.0.1"
# one_alloc = { version = "0.1.0", git = "https://github.com/ardaku/one_alloc" }
# Requires std?
# context-allocator = "0.2.3"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[target.'cfg(target_arch = "riscv64")'.dependencies]
rustsbi = "0.2.2"
riscv = "0.8.0"
riscv-rt = "0.8.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "7.2.0"
aarch64 = "*"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.9"

[features]
default = ["uefi_support"]
uefi_support = ["dep:uefi", "dep:uefi-macros", "dep:acpi"]
archypervisor = []
